[package]
name = "zola-client"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.95"
tracing-wasm = "0.2"
web-sys = { version = "0.3.72", features = ["Window", "Document", "HtmlElement", "Text"] }
nostr-sdk = "0.44.1"
wasm-bindgen-futures = "0.4.64"
yew = { version = "0.23.0", features = ["csr"] }
yew-router = "0.20.0"
pulldown-cmark = "0.12.2"
gloo-console = "0.3.0"
futures = "0.3.32"
chrono = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.64"