[package]
name = "zola-client"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.118"
tracing-wasm = "0.2"
web-sys = { version = "0.3.72", features = ["Window", "Document", "HtmlElement", "Text"] }
nostr-sdk = "0.44.1"
wasm-bindgen-futures = "0.4.64"
yew = { version = "0.23.0", features = ["csr"] }
yew-router = "0.20.0"
pulldown-cmark = "0.13.3"
gloo-console = "0.4.0"
futures = "0.3.32"
chrono = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
gloo-net = "0.7.0"
strip_markdown = "0.2.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.64"